refactor(compiler/lexer): replace get(0) with getFirst() in LexerTest